<resources>
    <string name="app_name">Nilo</string>
    <string name="create_product">Create</string>
    <string name="loading">Loading</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_price">Price</string>
    <string name="add_product">Add product</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="product_added">Product added!</string>
    <string name="insert_error">An error has occurred inserting</string>
    <string name="error_fetching_data">An error has occurred fetching data</string>
    <string name="delete_error">Error deleting the element</string>
    <string name="update_product">Update</string>
    <string name="product_updated">Product updated!</string>
    <string name="error_sending_image">An error has occurred uploading the image</string>
    <string name="product_empty_cart">Empty cart</string>
    <string name="cart_full">Total: $%1$.2f</string>
    <string name="product_view_cart">Shopping cart</string>
    <string name="shopping_cart_title">Shopping cart</string>
    <string name="pay">Pay</string>
    <string name="available_label">Available: %1$d</string>
    <string name="total_label">&lt;b>&lt;big>Total: $%1$.2f USD&lt;/big>&lt;/b>&lt;br>(%2$d * $%3$.2f)</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="track_order">Track order</string>
    <string name="status">Status: %1$s</string>
    <string name="order_id">ID: %1$s</string>
    <string name="do_you_need_help">Do you need help?</string>
    <string name="buy_done">You got it!</string>
    <string name="sign_out">Sign out</string>
    <string name="order_status_ordered">Ordered</string>
    <string name="order_status_preparing">Preparing</string>
    <string name="order_status_sent">Sent</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="order_status_unknown">Unknown</string>
    <string name="order_history">Order History</string>
    <string name="track_title">Tracking</string>
    <string name="type_here">Type here…</string>
    <string name="chat_title">Chat support</string>
    <string name="error_chat">An error has occurred</string>
    <string name="error_delete_message">An error has occurred deleting message</string>
    <string name="delete_message">Message deleted!</string>
    <string name="notification_channel_id_default">general</string>
    <string name="generals">Generals</string>

    <!-- Facebook login-->
    <string name="facebook_application_id" translatable="false">1260857794416315</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1260857794416315</string>
    <string name="login_welcome">Welcome, please sign in</string>
    <string name="login_email">Email</string>
    <string name="login_google">Google</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_phone">Phone</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_uri_photo">Uri photo</string>
    <string name="profile_update">Update</string>
    <string name="profile">Profile</string>
    <string name="error_profile_update">An error has occurred trying to update profile</string>
    <string name="profile_title">Profile</string>
    <string name="load_more">More</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="pref_notification">Enable notifications</string>
    <string name="pref_offers_key">keyOffers</string>
    <string name="pref_offers_title">Offers and promotions</string>
    <string name="notifications_activated">Notifications activated</string>
    <string name="notifications_deactivated">Notifications desactivated</string>
    <string name="settings">Settings</string>
    <string name="settings_topic_offers">topic_offers</string>
    <string name="offer">Offers</string>
    <string name="history">History</string>
    <string name="offer_title">Offers</string>

</resources>