<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:title="@string/history"
        app:showAsAction="never"
        android:icon="@drawable/ic_history" />

    <item android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item android:id="@+id/actions_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_offer"
        android:title="@string/offer"
        android:icon="@drawable/ic_local_offer"
        app:showAsAction="ifRoom" />

</menu>