<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/common_padding_default">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:gravity="center"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgIcon"
        app:layout_constraintTop_toTopOf="@id/imgIcon"
        app:layout_constraintBottom_toBottomOf="@id/imgIcon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEmail"
            android:layout_width="@dimen/login_button_default_width"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            app:icon="@drawable/ic_email"
            android:backgroundTint="@color/orange_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome"
            app:layout_constraintBottom_toTopOf="@id/guidelineMiddle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_google"
            android:backgroundTint="@color/blue_google"
            app:icon="@drawable/ic_google"
            app:layout_constraintStart_toStartOf="@id/btnEmail"
            app:layout_constraintEnd_toEndOf="@id/btnEmail"
            app:layout_constraintTop_toBottomOf="@id/btnEmail" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook"
            android:backgroundTint="@color/blue_facebook"
            app:icon="@drawable/ic_facebook"
            app:layout_constraintStart_toStartOf="@id/btnEmail"
            app:layout_constraintEnd_toEndOf="@id/btnEmail"
            app:layout_constraintTop_toBottomOf="@id/btnGoogle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_phone"
            android:backgroundTint="@color/green_500"
            app:icon="@drawable/ic_phone"
            app:layout_constraintStart_toStartOf="@id/btnEmail"
            app:layout_constraintEnd_toEndOf="@id/btnEmail"
            app:layout_constraintTop_toBottomOf="@id/btnFacebook" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Terms and conditions" />

</androidx.constraintlayout.widget.ConstraintLayout>