<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    android:padding="@dimen/common_padding_default"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ibProfile"
        android:layout_width="@dimen/login_button_default_width"
        android:layout_height="@dimen/login_button_default_width"
        android:background="?attr/selectableItemBackground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_full_name"
        android:layout_marginTop="@dimen/common_padding_min"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUriPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_uri_photo"
        android:layout_marginTop="@dimen/common_padding_min"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUriPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_update"
        android:layout_marginTop="@dimen/common_padding_min"/>

</androidx.appcompat.widget.LinearLayoutCompat>