<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Nilo.AppBarOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/Theme.Nilo.PopUpOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/containerMain"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="@dimen/product_preview_cart_height"
            android:text="@string/product_empty_cart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/common_padding_default"
            android:layout_marginEnd="@dimen/common_padding_default"
            android:layout_marginBottom="@dimen/common_padding_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnShoppingCart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_view_cart"
            android:layout_marginEnd="@dimen/common_padding_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTotal"
            app:layout_constraintBottom_toBottomOf="@+id/tvTotal" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvProducts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvTotal"
            tools:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProducts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_product"/>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/lyProgress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="visible"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>