<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgProductDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="16:9" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProductNameDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProductDetail"
        tools:text="Product name" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efabAddToCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_padding_default"
        android:textAlignment="center"
        android:text="@string/add_to_cart"
        app:icon="@drawable/ic_add_shopping_cart"
        app:iconGravity="textEnd"
        app:layout_constraintStart_toStartOf="@+id/tvProductNameDetail"
        app:layout_constraintEnd_toEndOf="@id/tvProductNameDetail"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ibSumDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_circle"
        android:background="?attr/selectableItemBackground"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintStart_toEndOf="@+id/tilQuantityDetail"
        app:layout_constraintTop_toTopOf="@+id/ibSubDetail"
        app:layout_constraintBottom_toBottomOf="@id/ibSubDetail" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ibSubDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_remove_circle"
        android:background="?attr/selectableItemBackground"
        android:layout_marginBottom="@dimen/commong_padding_medium"
        app:layout_constraintBottom_toTopOf="@+id/efabAddToCart"
        app:layout_constraintStart_toStartOf="@id/tvProductNameDetail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilQuantityDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="3"
        android:textAlignment="center"
        android:layout_marginVertical="@dimen/common_padding_default"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_marginStart="@dimen/common_padding_min"
        app:layout_constraintStart_toEndOf="@id/ibSubDetail"
        app:layout_constraintTop_toTopOf="@id/ibSubDetail"
        app:layout_constraintBottom_toBottomOf="@id/ibSubDetail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieQuantityDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:textAlignment="center"
            android:inputType="number"
            android:imeOptions="actionDone"
            tools:text="5"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAvailable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/available_label"
        app:layout_constraintStart_toStartOf="@+id/tvProductNameDetail"
        app:layout_constraintEnd_toEndOf="@+id/tvProductNameDetail"
        app:layout_constraintBottom_toTopOf="@+id/ibSubDetail" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotalPriceDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:text="@string/total_label"
        android:layout_marginStart="@dimen/common_padding_default"
        app:layout_constraintStart_toEndOf="@+id/ibSumDetail"
        app:layout_constraintEnd_toEndOf="@+id/tvProductNameDetail"
        app:layout_constraintTop_toTopOf="@id/ibSubDetail"
        app:layout_constraintBottom_toBottomOf="@id/ibSubDetail"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="@id/tvProductNameDetail"
        app:layout_constraintEnd_toEndOf="@id/tvProductNameDetail"
        app:layout_constraintTop_toBottomOf="@id/tvProductNameDetail"
        app:layout_constraintBottom_toTopOf="@+id/tvAvailable">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDescriptionDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="Product description"/>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>